# RadarTimelineData

./: .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test.yml
notes/: process.md
radar_timeline_data/: __init__.py  main.py
radar_timeline_data/audit_writer/: __init__.py  audit_writer.py  stylesheet.py
radar_timeline_data/runs/: transplant_run.py  treatment_run.py
radar_timeline_data/utils/: __init__.py  args.py  connections.py  patient_map.py  polarUtil.py  polar_utils.py  transplant_utils.py  transplants.py  treatment_utils.py  treatments.py  utils.py
scripts/: main.py
tests/: test_connections.py  test_main.py  test_utils.py
tests/transplants/: test_format.py  test_group_and_reduce_rr.py
tests/treatments/: test_combine_treatments.py  test_group_and_reduce.py  test_grouping_overlapping_dates.py  test_misc.py  test_overlapping_dates.py
