[project]
name = "RadarTimelineData"
version = "0.1.0"
description = ""
authors = [{ name = "oliver.reeves", email = "oliver.reeves@ukkidney.org" }]
requires-python = ">=3.11.0, <3.12"
readme = "README.md"
dependencies = [
    "pyyaml~=6.0",
    "sqlalchemy>=2.0.23,<3",
    "pyodbc>=5.0.1,<6.0.0",
    "xlsxwriter>=3.1.0,<4",
    "openpyxl>=3.1.2,<4",
    "psycopg2>=2.9.6,<3",
    "types-python-dateutil>=2.8,<3",
    "types-openpyxl>=3.1.0.26,<4",
    "polars==1.31",
    "rr-connection-manager==0.4.1",
    "python-docx>=1.1.0,<2",
    "pyarrow>=16.1.0,<17",
    "pandas>=2.2.2,<3",
    "radar-models",
    "loguru>=0.7.2,<0.8",
    "ukrdc-sqla>=2.5.1,<3",
    "ukrr-models>=3,<4",
    "tenacity>=8.3.0,<9",
    "click>=8.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3.10.0,<4",
    "faker>=18.4.0,<19",
    "mypy>=1.2.0,<2",
    "bandit>=1.7.5,<2",
    "tox>=4.4.12,<5",
    "pytest-cov>=4.0.0,<5",
    "ruff>=0.12.4",
    "tox-uv>=1.25.0",
    "ursus",
]

[tool.uv]

[tool.uv.sources]
radar-models = { git = "https://github.com/renalreg/radar-models.git" }
ursus = { git = "https://github.com/renalreg/Ursus.git" }

[project.scripts]
timeline = "scripts.main:main"

[tool.hatch.build.targets.sdist]
include = ["radar_timeline_data"]

[tool.hatch.build.targets.wheel]
include = ["radar_timeline_data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint]
disable = "too-many-locals, too-many-return-statements, too-many-branches, fixme, too-many-lines"
max-line-length = 160
